# projects

./: .gitignore  README.md
explorations/: README.md
explorations/particles/: .clang-format  CMakeLists.txt  README.md
explorations/particles/src/: app.cpp  app.h  main.cpp  sdl_app.cpp  sdl_app.h
gamedev/: README.md
gemini/: gen-cert-old.sh  gen-cert.sh  notes.md
gemini/c/: .clangd  .gitignore  meson.build
gemini/c/common/: log.h
gemini/c/server/: main.c
gemini/c/subprojects/: libressl.wrap  slog.wrap
gemini/c/subprojects/packagefiles/slog/: meson.build
gemini/cert/: client-certconfig.txt  client-csrconfig.txt  server-certconfig.txt  server-csrconfig.txt
hack-assembler/odin/: .gitignore  Fill.asm  Makefile  Mult.asm  main.odin
mapmaker/clj/: README.md  project.clj
mapmaker/clj/src/mapmaker/: core.clj  events.clj  tilemap.clj  views.clj
mdbook-theme/: book.toml
mdbook-theme/mdbook-theme/: mdbook-theme.css  mdbook-theme.js
mdbook-theme/patches/theme/: index.hbs
mdbook-theme/src/: SUMMARY.md  chapter_1.md  index.md  installation.md
mdbook-theme/src/articles/: all-the-markdown.md
mdbook-theme/src/projects/project-a/: features.md  index.md  installation.md
mdbook-theme/src/projects/project-a/docs/: index.md
mdbook-theme/src/projects/project-a/docs/tutorials/: tutorial-a.md
mdbook-theme/src/projects/project-a/images/: frog-lucas-van-oort-unsplash.avif
robobots/: README.md  compose-base.yaml  compose-base.yaml.full  setup.sh  start.sh  stop.sh  teardown.sh
robobots/clj/: README.md  bb.edn  compose.yaml  deps.edn  project.clj  readme.md  workspace.edn
robobots/clj/bases/server/src/robobots/server/: core.clj
robobots/clj/bases/server/test/robobots/server/: core_test.clj
robobots/clj/components/api/: deps.edn
robobots/clj/components/api/src/robobots/api/: api.clj  core.clj
robobots/clj/components/api/test/robobots/api/: api_test.clj
robobots/clj/dev/: seed-tables.sql
robobots/clj/development/src/: user.clj
robobots/clj/old/dev/: setup-tables.sql
robobots/clj/old/src/robobots/: core.clj  db.clj  html.clj  routes.clj
robobots/clj/old/src/robobots/routes/: home_page.clj
robobots/clj/projects/api/: deps.edn
robobots/clj/src/robobots/: core.clj
robobots/scripts/certs/: admin-crtconfig.txt  admin-csrconfig.txt  api-crtconfig.txt  api-csrconfig.txt  ca-crtconfig.txt  ca-csrconfig.txt  db-crtconfig.txt  db-csrconfig.txt  gen-certs.sh
robobots/scripts/db/: Dockerfile  setup-db.sql
src/mapmaker/: core.clj  events.clj  views.clj
todo/clj/: README.md  project.clj
todo/clj/src/todo/: core.clj
todo/clj/test/todo/: core_test.clj
